# leadgen-ai

./: .env.example  .gitignore  LICENSE  MANIFEST.in  PUBLISH.md  PYPI_TRUSTED_PUBLISHER.md  README.md  install.ps1  leadgen.cmd  main.py  publish_pypi.ps1  pyproject.toml  requirements.txt  run.bat  run.ps1
.github/workflows/: workflow.yml
agent/: __init__.py  branding.py  config.py  export.py  llm.py  models.py  models_catalog.py  pipeline.py  search.py
